--- a/www/http/htdocs/view/login.html
+++ b/www/http/htdocs/view/login.html
@@ -8,17 +8,23 @@
 	}
 
 </style>
-<div class="group"> 
 
-	<div class='group input-group'>
-		<span class='input-group-addon'>@</span>
-		<input class='form-control' placeholder='Username' type="text" ng-model='credentials.user'/>
-	</div>
 
-	<div class='group input-group'>
-		<input class='form-control' placeholder='Password' type="password" ng-model='credentials.pwd'/>
+<form ng-submit="login(credentials)" id="loginForm">
+	<div class="group"> 
+		<div class="alert alert-danger alert-dismissible" role="alert">
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		</div>
+		<div class='group input-group'>
+			<span class='input-group-addon'>@</span>
+			<input class='form-control' placeholder='Username' type="text" ng-model='credentials.username'/>
+		</div>
+
+		<div class='group input-group'>
+			<input class='form-control' placeholder='Password' type="password" ng-model='credentials.password'/>
+		</div>
+		<button type="submit" class="btn btn-primary" ng-disabled='!credentials.username || !credentials.password'>
+			Login
+		</button>
 	</div>
-	<button class="btn btn-primary" ng-disabled='!credentials.user || !credentials.pwd' ng-click='login(credentials)'>
-		Login
-	</button>
-</div>
+</form>
